# Hikari-LLVM19

./: .gitignore  CMakeLists.txt  README.md
obfuscation/: AntiClassDump.cpp  AntiDebugging.cpp  AntiHooking.cpp  BogusControlFlow.cpp  CMakeLists.txt  ConstantEncryption.cpp  CryptoUtils.cpp  Flattening.cpp  FunctionCallObfuscate.cpp  FunctionWrapper.cpp  IndirectBranch.cpp  Obfuscation.cpp  SplitBasicBlocks.cpp  StringEncryption.cpp  SubstituteImpl.cpp  Substitution.cpp  Utils.cpp
obfuscation/include/: Obfuscation.h
